--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "stylelint-config-standard": "^20.0.0"
   },
   "devDependencies": {
+    "eslint-config-react-app": "^5.2.1",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.3.12",
     "node-sass": "^4.14.1",
