--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-google-maps": "^9.4.5",
     "react-helmet": "^6.1.0",
     "stylelint": "^13.6.1",
     "stylelint-config-sass-guidelines": "^7.0.0",
