--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@types/jsdom": "^16.2.3",
     "gatsby": "^2.24.41",
     "gatsby-image": "^2.4.15",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -15,6 +16,7 @@
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-transformer-sharp": "^2.5.12",
     "gsap": "^3.5.0",
+    "jsdom": "^16.4.0",
     "lodash": "^4.17.20",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
