--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@types/jsdom": "^16.2.3",
+    "TagCloud": "^2.1.0",
     "gatsby": "^2.24.41",
     "gatsby-image": "^2.4.15",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -17,6 +18,7 @@
     "gatsby-transformer-sharp": "^2.5.12",
     "gsap": "^3.5.0",
     "jsdom": "^16.4.0",
+    "lerp": "^1.0.3",
     "lodash": "^4.17.20",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
@@ -24,6 +26,7 @@
     "react-dom": "^16.12.0",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^6.1.0",
+    "react-spring": "^8.0.27",
     "stylelint": "^13.6.1",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "stylelint-config-standard": "^20.0.0"
