--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,8 +7,9 @@
         "color-named": "always-where-possible",
         "no-missing-end-of-source-newline": null,
         "function-parentheses-space-inside": null,
-        "scss/dollar-variable-pattern": null,
         "selector-class-pattern": null,
-        "indentation": 4
+        "indentation": 4,
+        "value-keyword-case": null,
+        "max-nesting-depth": 2
     }
 }
