--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-spring": "^8.0.27",
     "stylelint": "^13.6.1",
     "stylelint-config-sass-guidelines": "^7.0.0",
-    "stylelint-config-standard": "^20.0.0"
+    "stylelint-config-standard": "^20.0.0",
+    "typed.js": "^2.0.11"
   },
   "devDependencies": {
     "eslint-config-react-app": "^5.2.1",
