--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.12.0",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^6.1.0",
+    "react-responsive": "^8.1.0",
     "react-spring": "^8.0.27",
     "stylelint": "^13.6.1",
     "stylelint-config-sass-guidelines": "^7.0.0",
