--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.3.12",
     "node-sass": "^4.14.1",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "stylelint-order": "^4.1.0"
   },
   "keywords": [
     "gatsby"
