--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "tabWidth": 4,
   "trailingComma": "none",
   "jsxSingleQuote": true,
-  "jsxBracketSameLine": true
+  "jsxBracketSameLine": true,
+  "quoteProps": "consistent"
 }
