--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "trailingComma": "none",
   "jsxSingleQuote": true,
   "jsxBracketSameLine": true,
-  "quoteProps": "consistent"
+  "quoteProps": "consistent",
+  "bracketSpacing": false
 }
