--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -10,6 +10,7 @@
         "selector-class-pattern": null,
         "indentation": 2,
         "value-keyword-case": null,
-        "max-nesting-depth": 3
+        "max-nesting-depth": 3,
+        "declaration-block-semicolon-newline-after": null
     }
 }
