--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@
 root = true
 
 [*]
-indent_style = space
+indent_style = tab
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
@@ -13,4 +13,4 @@ indent_size = 2
 quote_type = single
 
 [*.{js,jsx,ts,tsx}]
-max_line_length = 100
+max_line_length = 120
