--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -8,7 +8,7 @@
         "no-missing-end-of-source-newline": null,
         "function-parentheses-space-inside": null,
         "selector-class-pattern": null,
-        "indentation": 2,
+        "indentation": "tab",
         "value-keyword-case": null,
         "max-nesting-depth": 3,
         "declaration-block-semicolon-newline-after": null
