--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "dev": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+		"stylelint-all": "stylelint src/**/*.{scss,css} --fix",
+		"prettier-all": "prettier --write src/."
   },
   "repository": {
     "type": "git",
